# Robostudio

./: .gitignore  LICENSE  README.md  index.html  installation.txt  pyproject.toml  test_project.py
config_info/: grasp.yaml  grasp_object.yaml  issac2sim.yaml  kinematic_info.yaml  novel_time.yaml  novelpose.yaml  push_bag.yaml  relationship.yaml  ur5.yaml
dexhand/: dexhand.py
dexhand/code/: dexhand.py  dexhand_roscontrol.py
nerfstudio/configs/: method_configs.py
nerfstudio/data/dataparsers/: nerfstudio_dataparser.py  nerfstudio_dataparser_backward.py
nerfstudio/exporter/: exporter_utils.py  tsdf_utils.py
nerfstudio/models/: semantic_nerfw.py  splatfacto.py  splatfacto_backward.py
nerfstudio/robotic/barycentric_cuda/: CMakeLists.txt  barycentric.cu  barycentric_binding.cpp  complie_memo.txt  test_barycentric.py
nerfstudio/robotic/colmap_util/: colmap_to_json.py  refine_with_colmap.ipynb
nerfstudio/robotic/config/: mmengine_config.py  omnisim_base.py  raw_config.py
nerfstudio/robotic/custom_arm/: ur5.py
nerfstudio/robotic/debug/: ur5.py
nerfstudio/robotic/export_util/: clean_2dgs_mesh.py  export_2dgs_gripper.py  export_bbox_withgripper.py  (+2 more)
nerfstudio/scripts/: exporter.py  render.py
nerfstudio/utils/: eval_utils.py
robotic_scripts/: free_trajectory_render.py
tests/: test_train.py
tests/dataparsers/: test_nerfstudio_dataparser.py
tests/field_components/: test_embedding.py  test_encodings.py  test_field_outputs.py  test_fields.py  test_temporal_distortions.py
tests/pipelines/: test_vanilla_pipeline.py
tests/plugins/: test_registry.py
(+62 files in other folders)
